--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -126,7 +126,7 @@ People value biodiversity in particular for its existence value. The risk of spe
 
 ### Habitat (subgoal of biodiversity)
 
-The habitat subgoal measures the average condition of marine habitats present in each region that provide critical habitat for a broad range of species (mangroves, coral reefs, seagrass beds, kelp forests, salt marshes, sea ice edge, tidal flats, and subtidal soft bottom). This subgoal is considered a proxy for the condition of the broad suite of marine species.
+The habitat subgoal measures the average condition of marine habitats present in each region that provide critical habitat for a broad range of species (mangroves, coral reefs, seagrass beds, kelp forests, salt marshes, sea ice edge, tidal flats, subtidal soft bottom, and beaches). This subgoal is considered a proxy for the condition of the broad suite of marine species.
 
 Data availability remains a major challenge for species and habitat assessments. We compiled and analyzed the best available data in both cases, but key gaps remain. Although several efforts have been made in recent years to create or compile the data necessary to look at the status and trends of marine habitats, most efforts are still hampered by limited geographical and temporal sampling [@joppa2016filling], although sea ice @digirolamo2022 data is an exception. In addition, most marine habitats have only been monitored since the late 1970s at the earliest, many sites were only sampled over a short period of time, and very few sites were monitored before the late 1990s so establishing reference points was difficult. Salt marshes, kelp forests, and seagrasses were the most data-limited of the habitats included in the analysis.
 
