Fix habitat table: test 2

--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -152,8 +152,7 @@ where, $C_{k} = C_{c}/C_{r}$ and $N$ is the number of habitats in a region. $C_{
 | Sea ice edge | Current (3-year rolling-average using the current year and previous 2 years) % cover of sea ice having 10-50% cover, divided by reference % cover average from 1979-2000 | Same as condition                                   | Calculated from the fitted slope of %-deviation-from-reference per year, of the most recent 5 years of data (each year of data is based on 3-year average) |
 | Soft bottom  | Soft-bottom destructive fishing practices relative to area of soft-bottom habitat and rescaled to 0-1 based on relative global values                                    | Clawson et al. [-@clawson_global_2025]                | Calculated using 5 most recent years of condition data                                                                                                     |
 | Tidal flat   | Average tidal flat extent of 2010 and 2013 relative to historic extent (average of 1989 and 1992)                                                                        | Tidal flat extent per oceanic region (vector based) | Calculated across data from 2001-2013                                                                                                                      |
-| Beaches      | Conditon was determined from a 2018 report on the global erosion rates, and multiplied by number of years since this assessment, and scaled from 0-1.
-| Sandy beach extent per oceanic region (vector based)  | Sandy beach trend was calculated from changes in coastal area (km2) from 2010 to 2020, multiplied by year's since assessment, and applied to each country's area. Trend was rescaled to 0-1.                                                                                                                     |
+| Beaches      | Conditon was determined from a 2018 report on the global erosion rates (% of affected beaches by erosion rate * number of years assessment), and scaled from 0-1.                 | Sandy beach extent per oceanic region (vector based)  | Sandy beach trend was calculated from changes in coastal area (km2) from 2010 to 2020, multiplied by year's since assessment, and applied to each country's area. Trend was rescaled to 0-1.                                                                                                                     |
 
 A significant amount of pre-processing of the habitat data was needed to fill data gaps and resolve data quality issues (Section 7). Because consistent habitat monitoring data was unavailable for many countries, anomalous values can occur. This is particularly true for highly variable habitats like seagrasses or coral reefs which can have significant site-to-site and year-to-year differences in extent and condition [@bruno_regional_2016]. Biases may also have been introduced from spatial (e.g., protected or impacted sites) and temporal (e.g., directly after a disturbance event) selections in sampling. In regions where we had a limited number of surveys in a particular country, overall status can be under- or overestimated because of these fluctuations.
 
